--- a/front-end/css/chart.css
+++ b/front-end/css/chart.css
@@ -10,12 +10,12 @@ and open the template in the editor.
 @import url(//fonts.googleapis.com/css?family=Oswald:400);
 
 .chart {
-  /*position: absolute;*/
-  width: 80%;
-  height: 80%;
-  /*top: 50%;
+  position: absolute;
+  width: 700px;
+  height: 700px;
+  top: 50%;
   left: 50%;
-  margin: -225px 0 0 -225px;*/
+  margin: -225px 0 0 -225px;
 }
 .pieTip {
   position: absolute;
