--- a/front-end/css/source-style.css
+++ b/front-end/css/source-style.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 body {
-  background: url("../img/bg.png") no-repeat center fixed;
+  background: url("../img/b.png") no-repeat center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
